<resources>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="btn_id">0x7f060066</string>
    <string name="success">成功</string>
    <string name="failure">失败</string>
    <string name="confirm">确定</string>
    <string name="go_shop">去逛逛</string>
    <string name="detele">删除</string>
    <string name="submit">提交</string>
    <string name="skip">跳过</string>
    <string name="modify">修改</string>
    <string name="new_add">新增</string>
    <string name="more">更多</string>
    <string name="search">搜索</string>
    <string name="help">帮助</string>
    <string name="about">关于</string>
    <string name="exit">注销</string>
    <string name="version">版本：</string>
    <string name="shipping_costs">运费：</string>
    <string name="warehouse">仓库：</string>
    <string name="space">&#160;&#160;</string>
    <string name="quantity">数量：</string>
    <string name="address">地址：</string>
    <string name="user_login">登录</string>
    <string name="app_name">直供</string>
    <string name="my_direct_supply">我的直供平台</string>
    <string name="weclcome_hello_user">您好，</string>
    <string name="weclcome_back">，欢迎您回来！</string>
    <string name="user_level">您目前的级别：</string>
    <string name="user_integration">积分：</string>
    <string name="user_account_balance">帐户余额：</string>
    <string name="pending_payment_orders">待付款订单</string>
    <string name="await_receiving_orders">待收货订单 </string>
    <string name="all_orders">全部订单 </string>
    <string name="my_collection">我的收藏 </string>
    <string name="update_password">修改密码</string>
    <string name="order_number">订单号：</string>
    <string name="order_amount">订单金额：</string>
    <string name="order_time">下单时间：</string>
    <string name="order_status">订单状态：</string>
    <string name="order_cancel">取消订单</string>
    <string name="pay_on_line">在线支付</string>
    <string name="look_order">查看订单</string>
    <string name="btn_confirm_receiving">&#160;&#160;确认收货&#160;&#160;</string>
    <string name="nearly_a_month_of_orders">近1个月订单</string>
    <string name="ago_a_month_of_orders">1个月前订单</string>
    <string name="sum_price">订单总额：</string>
    <string name="deduct_price">账户余额支付：</string>
    <string name="need_play">您还需支付：</string>
    <string name="goods_amount">商品金额：</string>
    <string name="aftermarket_amount">售后金额：</string>
    <string name="pay_money">-应付金额：</string>
    <string name="pay_money_count">应付金额：</string>
    <string name="shipping_address">详细地址：</string>
    <string name="shipping_address_name">手机号码：</string>
    <string name="tel_number">联系电话：</string>
    <string name="mobile_number">手  机：</string>
    <string name="shipping_method">送货方式：</string>
    <string name="order_detail">订单详情</string>
    <string name="tips">温馨提示</string>
    <string name="tip_one">1、若您之前从未与电信结算过业务发展酬金,请与门店客服经理联系,办理相关手续。</string>
    <string name="tip_two">2、为了更好的为您结算酬金，请提供门店相对应的渠道编码，若不清楚渠道编码请咨询门店服务经理！若不提供渠道编码可能会导致无法结算酬金！</string>
    <string name="shop_cart_order">提交订单信息</string>
    <string name="shop_cart_order_submit">提交订单</string>
    <string name="shop_cart_channel">填写渠道编码</string>
    <string name="shop_cart_channel_no_content">请输入信息后再提交!</string>
    <string name="shop_cart_channel_no_info">请输入渠道信息后再提交!</string>
    <string name="shop_cart_channel_no_remark">请输入备注信息后再提交!</string>
    <string name="shop_cart_channel_info">\t\t渠道编码：</string>
    <string name="shop_cart_channel_info_nomal">渠道编码：</string>
    <string name="shop_cart_channel_remark_tip">注：请正确填写，提交后不可自行修改。</string>
    <string name="shop_cart_channel_remark">\n备注信息：</string>
    <string name="shop_cart_channel_remark_info">备注信息：</string>
    <string name="shop_cart_channel_text_num">注：64个字以内，提交后不可自行修改。</string>
     <string name="shop_cart_channel_suc_edit">\n确认提交后,信息不再允许修改!</string>
     <string name="shop_cart_channel_skip">\t\t为了更好的为您结算酬金，请提供门店相对应的渠道编码，若不清楚渠道编码请咨询门店服务经理！\n\t\t若不提供渠道编码可能会导致无法结算酬金！</string>
    <string name="old_password">&#160;&#160;&#160;&#160;原密码：</string>
    <string name="new_one_password">&#160;&#160;&#160;&#160;新密码：</string>
    <string name="new_two_password">再次输入：</string>
    <string name="selling_point_of_products">产品卖点：</string>
    <string name="product_explain">产品描述：</string>
    <string name="standard_configuration">标准配置：</string>
    <string name="remember_my_name">记住我的用户名</string>
    <string name="input_two_diffent_password">两次输入的新密码不一样,请重新输入</string>
    <string name="order_status_no_payment">未付款</string>
    <string name="order_status_delivery">已发货</string>
    <string name="order_status_finished">已完成</string>
    <string name="no_data_pending_payment_orders">没有待付款订单</string>
    <string name="no_data_await_receiving_orders">没有待收货订单</string>
    <string name="order_cancel_confirm">您确认取消该订单吗？ </string>
    <string name="order_delivery_confirm">您确认该订单已经收到货吗？</string>
    <string name="order_cancel_success">取消订单成功</string>
    <string name="order_delivery_success">确认收货成功</string>
    <string name="prepaid">预付费</string>
    <string name="postpaid">后付费</string>
    <string name="telephone_voucher">话费券</string>
    <string name="delete_myfavorite_item_confirm">您确认删除该收藏吗？ </string>
    <string name="delete_browse_records_confirm">您确认删除该浏览记录吗？ </string>
    <string name="detele_failed">删除失败</string>
    <string name="add_myfavorite_success">收藏成功</string>
    <string name="add_myfavorite_failed">收藏失败</string>
    <string name="had_canceled">已取消</string>
    <string name="had_sended">已发货</string>
    <string name="login_hit">您还没有登录，请先登录！</string>
    <string name="shop_cart_num">购物车里面的产品的数量有为0</string>
    <string name="confirm_exit">您确认要退出吗</string>
    <string name="browse_records">近期浏览</string>
    <string name="customer_hotline">客服热线</string>
    <string name="feedback">意见反馈</string>
    <string name="copyright">版权所有：中国电信集团江苏分公司</string>
    <string name="customer_hotline_number_title">客服电话：</string>
    <string name="customer_hotline_number">4008-929-100</string>
    <string name="baigong_introduce">佰供介绍</string>
    <string name="shopping_introduce">购物说明</string>
    <string name="myfavorite_no_data">您还没有收藏过商品，快去收藏自己喜欢的商品！</string>
    <string name="delivery_info_no_data">您还没有收货地址，快去新增！</string>
    <string name="browse_records_no_data">您还没有浏览过商品!</string>
    <string name="feedback_type">反馈类型：</string>
    <string name="feedback_context">反馈内容：</string>
    <string name="feedback_type_error">请选择反馈类型</string>
    <string name="feedback_context_error">请选择反馈内容</string>
    <string name="downning">正在下载</string>
    <string name="down_error">下载失败</string>
    <string name="update_hint">升级提醒</string>
    <string name="update_hint_msg">亲，有新的版本赶快升级！</string>
    <string name="no_update_quit">不更新,退出应用</string>
    <string name="sdcard_not_exit">您的手机没有sdcard，不能更新！</string>
    <string name="shop_cart_sure">&#160;&#160;确认订单&#160;&#160;</string>
    <string name="shop_cart">&#160;购物车&#160;</string>
    <string name="search_hint_text">请输入搜索词</string>
    <string name="sure_shop_cart">确认生成订单</string>
    <string name="sure_shop_cart_del_pro">删除购物车产品</string>
    <string name="sure_order">&#160;&#160;生成订单&#160;&#160;</string>
    <string name="consignee">收货人：</string>
    <string name="consignee_telphone">收货人电话：</string>
    <string name="consignee_mobile">手机：</string>
    <string name="consignee_address">收货地址：</string>
    <string name="logistics_business">物流商：</string>
    <string name="invoice_type">发票类型：</string>
     <string name="invoice_type_shop_cart">发票类型</string>
    <string name="loading">正在加载...</string>
    <string name="username">&#160;&#160;用户名：&#160;&#160;</string>
    <string name="input_username">请输入你的用户名</string>
    <string name="password">&#160;&#160;密&#160;&#160;&#160;&#160;码：&#160;&#160;</string>
    <string name="input_password">请输入你的密码</string>
    <string name="login_fail">登录失败</string>
    <string name="login_success">用户登录成功</string>
    <string name="username_or_password">用户名或者密码错误</string>
    <string name="user_lonig_title">江苏电信天翼直供网</string>
    <string name="remember_password">记住密码</string>
    <string name="msg_servicefail">服务出现异常</string>
    <string name="network_cannot_access">网络无法访问</string>
    <string name="msg_networkfail">直供服务连接失败，请重新登录！</string>
    <string name="last_logon_time">上次登录时间：</string>
    <string name="phone">手机</string>
    <string name="attachment">终端配件</string>
    <string name="cloudcard">天翼云卡</string>
    <string name="product_brand">产品品牌</string>
    <string name="price_period">价格区间</string>
    <string name="screen_period">主显示屏</string>
    <string name="net_type">网络制式</string>
    <string name="operation_system">操作系统</string>
    <string name="product_guide">产品导购</string>
    <string name="old_password_null">原密码不能为空！</string>
    <string name="new_password_null">新密码不能为空！</string>
    <string name="confirm_password_null">确认密码不能为空！</string>
    <string name="old_new_diffent_password">原密码和新密码相同！</string>
    <string name="zg_login_hit">请您登录</string>
    <string name="jiangshu_tianyi_zg">江苏天翼直供机网</string>
    <string name="jiangshu_tianyi_zg_site">js.189b2b.com</string>
    <string name="nodata">没有相应的数据</string>
    <string name="please_select">请选择...</string>
    <string name="delivery_province">省份：</string>
    <string name="empty_consigneed">请输入收货人</string>
    <string name="empty_consMobile">请输入手机号码</string>
    <string name="empty_province">请选择省份</string>
    <string name="empty_city">请选择城市</string>
    <string name="empty_county">请选择县区</string>
    <string name="empty_address_detail">请输入详细地址</string>
    <string name="empty_logisticts">请选择物流商</string>
    <string name="consignee_mobile_fomtter_error">请输入有效的手机号码！</string>
    <string name="advice_price">零售价&#160;</string>
    <string name="syscust_price">直供价&#160;</string>
    <string name="cust_price">促销价&#160;</string>
    <string name="procuct_actinfo">促销信息：还剩</string>
    <string name="product_stock">库存状态</string>
    <string name="after_login">未登录</string>
    <string name="sort_sail">销量</string>
    <string name="sort_price">价格</string>
    <string name="piece">件</string>
    <string name="provtitle">供应商：</string>
    <string name="cart_add">加入购物车</string>
    <string name="shop_cart_no_data_now">购物车暂时无数据！</string>
    <string name="favorites_add">收藏</string>
    <string name="sort_time">上市时间</string>
    <string name="product_buycount">购买数量：</string>
    <string name="product_profile">简介</string>
    <string name="product_specification">规格</string>
    <string name="product_consulting">咨询</string>
    <string name="product_consult_content">咨询内容</string>
    <string name="product_consult_tip">请填写咨询的内容</string>
    <string name="product_consult_btntitle">我要咨询</string>
    <string name="consult_too_much_word">不能超过150个字</string>
    <string name="product_color">机身颜色：</string>
    <string name="starting_now">正在启动......</string>
    <string name="password_hint">密码</string>
    <string name="username_hint">用户名</string>
    <string name="order_pya">付款</string>
    <string name="act_over">该活动已结束</string>
    <string name="product_cost">+产品费用：</string>
    <string name="product_cur_cost">费用：</string>
    <string name="sub_total">小计：</string>
    <string name="subtract_preferential">-优惠：</string>
    <string name="preferential">优惠：</string>
    <string name="carriage">+运费：</string>
    <string name="payment_details">支付明细</string>
    <string name="surfing_payment">翼支付(网银支付)：</string>
    <string name="you_need_payment">您还需为订单支付：</string>
    <string name="shipment_no">发货单号：</string>
    <string name="air_way_bill_no">运单号：</string>
    <string name="unit_price">单价：</string>
    <string name="description_of_gifts">附赠品说明</string>
    <string name="guess_you_like">猜您喜欢</string>
    <string name="delivery_address">收货地址</string>
    <string name="not_support_bestpay_tips">目前仅支持对天翼电信终端有限公司江苏分公司产品的订单进行手机支付！</string>
	<string name="serach_hint">请输入关键字</string>
	<string name="serach_hot">热门搜索</string>
	<string name="serach_history">搜索历史</string>
	<string name="serach_no_data">您还没有搜索过</string>
</resources>