<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/backgroud_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.digione.zgb2b.widget.TitleView
            android:id="@+id/shop_cart_channel_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/shop_cart_channel_tips"
                style="@style/shop_cart_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dip"
                android:text="@string/tips" />

            <TextView
                style="@style/shop_cart_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dip"
                android:text="@string/tip_one" />

            <TextView
                style="@style/shop_cart_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dip"
                android:text="@string/tip_two" >
            </TextView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dip"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/shop_cart_channel_info_nomal"
                    style="@style/shop_cart_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/shop_cart_channel_info_nomal" />

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/shop_cart_channel_num"
                        style="@style/shop_cart_text"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/multiline_edit_background" />

                    <TextView
                        style="@style/shop_cart_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_cart_channel_remark_tip"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dip"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/shop_cart_channel_remark_info"
                    style="@style/shop_cart_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/shop_cart_channel_remark_info" />

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/shop_cart_channel_info"
                        style="@style/shop_cart_text"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/multiline_edit_background"
                        android:gravity="left|top"
                        android:minLines="3" />

                    <TextView
                        style="@style/shop_cart_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_cart_channel_text_num"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="10dip"
                android:gravity="right"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/shop_cart_channel_btn"
                    style="@style/Button_background"
                    android:layout_width="94dip"
                    android:layout_marginRight="5dip"
                    android:gravity="center"
                    android:text="@string/submit" />

                <Button
                    android:id="@+id/shop_cart_channel_skip"
                    style="@style/Button_background"
                    android:layout_width="94dip"
                    android:gravity="center"
                    android:text="@string/skip" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>