<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="5dip"
    android:background="@drawable/rounded_background"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingTop="10dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dip" >

        <TextView
            android:id="@+id/order_detail_item_shipment_no_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shipment_no"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/order_detail_item_shipment_no_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air_way_bill_no"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/order_detail_item_air_way_bill_no_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/order_detail_item_simple_product_lv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:cacheColorHint="@color/transparent"
        android:divider="@color/transparent"
        android:dividerHeight="0dip"
        android:fadingEdge="none"
        android:fadingEdgeLength="0dip"
        android:listSelector="@color/transparent" >
    </ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="right"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_cost"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtract_preferential"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carriage"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_total"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/order_detail_item_product_cost_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/order_detail_item_subtract_preferential_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/order_detail_item_carriage_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/order_detail_item_sub_total_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/order_detail_item_description_of_gifts_ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_of_gifts"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/order_detail_item_description_of_gifts_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>