<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_mybaigong_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical"
    android:paddingLeft="8dip"
    android:paddingRight="8dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/all_order_bg"
        android:orientation="vertical"
        android:paddingLeft="10dip"
        android:paddingTop="10dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_order_number"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_number" />

                <TextView
                    android:id="@+id/tv_order_amount"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_amount"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_order_time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dip"
                    android:text="@string/order_time"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="10dip"
                android:gravity="center|center_horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/director_icon" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/devider_line2" />

        <ListView
            android:id="@+id/mybaigong_order_goods_lv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="@color/transparent"
            android:divider="@color/transparent"
            android:dividerHeight="1dip"
            android:fadingEdge="none"
            android:fadingEdgeLength="0dip"
            android:listSelector="@color/transparent" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:src="@drawable/workbench_category_devider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="43dip"
        android:background="@drawable/all_order_status_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10dip" >

        <TextView
            android:id="@+id/tv_order_status_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_status"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_order_status"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/orange"
            android:textSize="13sp" />

        <Button
            android:id="@+id/workbench_pay_order_btn"
            style="@style/Button_background"
            android:text="@string/order_pya" />

        <Button
            android:id="@+id/workbench_cancel_order_btn"
            style="@style/Button_background"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:text="@string/order_cancel" />
    </LinearLayout>

</LinearLayout>