<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e9e1d6"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="42dip"
        android:background="@drawable/j_top"
        android:baselineAligned="false"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/search_word"
            android:layout_width="0dip"
            android:layout_height="36dip"
            android:layout_gravity="center"
            android:layout_margin="8dip"
            android:layout_weight="1"
            android:background="#ffffff"
            android:drawablePadding="8dip"
            android:hint="@string/serach_hint"
            android:paddingLeft="8dip"
            android:paddingRight="10dip"
            android:singleLine="true"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/search_btn"
            android:layout_width="60dip"
            android:layout_height="fill_parent"
            android:background="@drawable/home_btn_selector"
            android:gravity="center" >

            <ImageView
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_gravity="center_vertical"
                android:background="@drawable/search"
                android:contentDescription="@string/search"
                android:gravity="center"
                android:scaleType="centerInside" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="36dip"
        android:layout_marginTop="8dip"
        android:background="#e9e1d6"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/search_history"
            style="@style/AppBaseTheme"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/left_btn_after"
            android:gravity="center"
            android:text="@string/serach_history"
            android:textSize="16sp" />

        <Button
            android:id="@+id/search_hot"
            style="@style/AppBaseTheme"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/rigth_btn"
            android:gravity="center"
            android:text="@string/serach_hot"
            android:textSize="16sp" />
    </LinearLayout>

    <GridView
        android:id="@+id/search_gridview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:layout_marginTop="15dip"
        android:cacheColorHint="#00000000"
        android:horizontalSpacing="8dip"
        android:listSelector="#e9e1d6"
        android:numColumns="3"
        android:stretchMode="columnWidth"
        android:verticalSpacing="6dip" >
    </GridView>

    <RelativeLayout
        android:id="@+id/search_no_content"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="#e9e1d6"
        android:gravity="center"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/serach_no_data"
            android:textSize="14sp" />
    </RelativeLayout>

</LinearLayout>